# lab_UserChat_NiccoloBenedetto

./: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Message.cpp  Message.h  NotificationCenter.cpp  NotificationCenter.h  Observer.h  README.md  Subject.h  UnreadMessage.cpp  UnreadMessage.h  User.cpp  User.h  main.cpp
gtest/: CMakeLists.txt  ChatRoomTest.cpp  MessageTest.cpp  NotifierTest.cpp  UserTest.cpp  runAllTests.cpp
gtest/lib/googletest-master/: appveyor.yml
gtest/lib/googletest-master/googlemock/: CMakeLists.txt
gtest/lib/googletest-master/googlemock/docs/: cook_book.md
gtest/lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py  upload.py
gtest/lib/googletest-master/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
gtest/lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_nc_test.py  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_stress_test.cc  gmock_test_utils.py
gtest/lib/googletest-master/googletest/: CMakeLists.txt
gtest/lib/googletest-master/googletest/cmake/: internal_utils.cmake
gtest/lib/googletest-master/googletest/docs/: advanced.md  faq.md  primer.md
gtest/lib/googletest-master/googletest/samples/: prime_tables.h  sample1.cc  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  (+5 more)
(+95 files in other folders)
